# seisplan

./: .gitmodules  Dockerfile  LICENSE  README.md  pyproject.toml
Docker/: Dockerfile
